# EnginX-closed

./: .gitignore  CMakeLists.txt  README.md
enginx/: CMakeLists.txt
enginx/include/enginx/: config.h  defines.h  ex_api.hpp
enginx/include/enginx/camera/: camera.hpp
enginx/include/enginx/core/: connection.hpp  graphicsContext.hpp  screen.hpp  window.hpp
enginx/include/enginx/event/: Event.hpp  EventListener.hpp
enginx/include/enginx/input/: keyboard.hpp  mouse.hpp
enginx/include/enginx/layers/: layerStack.hpp  layers.hpp
enginx/include/enginx/platform/: CocoaWindow.hpp  WaylandWindow.hpp  X11Window.hpp  init.hpp  win32Window.hpp
enginx/include/enginx/shader/: shader.hpp  shadersys.hpp
enginx/include/enginx/utility/: asserts.hpp  logger.hpp
enginx/include/ex_maths/: conversions.hpp  defines.h  ex_maths.hpp  matrix.hpp  operations.hpp  quaternions.hpp  simd_operations.hpp  square_root.h  transform.hpp  utility.hpp  vector.hpp
enginx/src/enginx/camera/: camera.cpp
enginx/src/enginx/core/: connection.cpp  graphicsContext.cpp  screen.cpp  window.cpp
enginx/src/enginx/event/: Event.cpp
enginx/src/enginx/input/: keyboard.cpp  mouse.cpp
enginx/src/enginx/layers/: layerStack.cpp  layers.cpp
enginx/src/enginx/platform/: CocoaWindow.cpp  WaylandWindow.cpp  X11Window.cpp  init.cpp  win32Window.cpp
enginx/src/enginx/shader/: shader.cpp  shadersys.cpp.later
enginx/src/enginx/utility/: logger.cpp
enginx/src/ex_maths/: conversions.cpp  matrix.cpp  operations.cpp  quaternions.cpp  simd_operations.cpp  square_root.cpp  transform.cpp  vector.cpp
(+18 files in other folders)
